--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -21,6 +21,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r req.txt
-      # - name: Test with pytest
-      #   run: |
-      #     pytest test.py
+      - name: Test with pytest
+        run: |
+          pytest test.py
