--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -8,8 +8,8 @@ jobs:
   build:
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9]
+        platform: [ubuntu-latest]
+        python-version: [3.8]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
@@ -24,3 +24,13 @@ jobs:
       - name: Test with pytest
         run: |
           pytest test.py
+      - name: Check docker installed or not
+        run: |
+          docker run hello-world
+      - name: Push to docker Hub
+        uses: docker/build-push-action@v2.4.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: mfsiat/devops-test
+          tag_with_ref: true
